<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal"
        android:weightSum="23">

        <TextView
            android:id="@+id/tvListTitle"
            style="@style/TvDefaultColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/layout_margin_half"
            android:layout_weight="10"
            android:gravity="center"
            android:textSize="17sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeTextType="uniform"
            tools:text="Sample title" />

        <TextView
            style="@style/Label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/accepted_col"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/ivIsAccepted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:contentDescription="@string/was_the_movie_accepted_or_not"
            android:gravity="center"
            android:padding="0dp"
            tools:src="@drawable/checkbox_marked" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnHistoryDetails"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center|end"
            android:layout_margin="2dp"
            android:layout_weight="5"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/details" />
    </LinearLayout>
</android.support.v7.widget.CardView>